--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <!-- banner section start here -->
     <section class="banner-container">
@@ -19,7 +21,7 @@
             <button class="Contact-button">Contact with me</button>
         </div>
     </section>
-    
+
     <!-- banner section end here -->
 
     <!-- Development section start here -->
@@ -29,8 +31,56 @@
             <h1>Why Web Development??</h1>
             <p>Working as a web developer can help you develop critical thinking abilities, <br>
                 as you often resolve real-world challenges with projects and fix code bugs regularly</p>
+
+        </div>
+        <div class="codding-section">
+            <div class="codding-section-content">
+                <div class="leftside-content">
+                    <h1>I will Do Coding and <br> Change The World</h1>
+                    <p>Without coding, we wouldn't have the websites, apps, and programs we rely on daily.</p>
+                    <button class="codding-button">Learn More</button>
+                </div>
+
+                <div class="rightside-content">
+                    <img src="/assets/Layer_1.png" alt="">
+
+                </div>
+            </div>
+        </div>
+        <div class="creating-section">
+            <div class="creating-section-content">
+                <div class="leftside-creating-content">
+                    <img src="/assets/Group 3.png" alt="">
+                </div>
+
+                <div class="rightside-creating-content">
+                    <h1>I will help People by creating <br>Modern Web System</h1>
+                    <p>A modern web application architecture is a software design approach that leverages cloud computing and microservices.</p>
+                    <button class="codding-button">Learn More</button>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="codding-section">
+            <div class="codding-section-content">
+                <div class="leftside-content">
+                    <h1>I will Do Coding and <br> Change The World</h1>
+                    <p>Without coding, we wouldn't have the websites, apps, and programs we rely on daily.</p>
+                    <button class="codding-button">Learn More</button>
+                </div>
+
+                <div class="rightside-content">
+                    <img src="/assets/Group 4.png" alt="">
+
+                </div>
+            </div>
         </div>
     </section>
     <!-- Development section end here -->
+
+    
+
 </body>
+
 </html>
