--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 
                 <div class="rightside-creating-content">
                     <h1>I will help People by creating <br>Modern Web System</h1>
-                    <p>A modern web application architecture is a software design approach that leverages cloud computing and microservices.</p>
+                    <p>A modern web application architecture is a software design approach that leverages cloud
+                        computing and microservices.</p>
                     <button class="codding-button">Learn More</button>
 
                 </div>
@@ -83,15 +84,65 @@
     <section class="inspiration-section-container">
         <div class="inspiration-section-content">
             <h1>My Inspiration</h1>
-            <p>The endless possibilities of creating digital experiences and the ability <br> to bring ideas to life through coding sparked my interest in web development</p>
+            <p>The endless possibilities of creating digital experiences and the ability <br> to bring ideas to life
+                through coding sparked my interest in web development</p>
         </div>
         <div class="box">
-                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/JUwePydwbUI?si=gs1Y7fF0mIuuhIvq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe class="video" width="560" height="315"
+                src="https://www.youtube.com/embed/JUwePydwbUI?si=gs1Y7fF0mIuuhIvq" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
     <!-- Inspiration section end here -->
 
+    <!-- Current target section start here -->
+    <section class="target-section-container">
+        <div class="target-section-content">
+            <h1>My Current Target</h1>
+            <p>My current target is <br> learn and practice html,css,javascript.</p>
+
+        </div>
+        <div class="target-item">
+            <div class="html-sec">
+                <div class="html-content">
+                    <div class="html-image">
+                        <img src="/assets/html.png" alt="">
+                    </div>
+                    <h1>HTML</h1>
+                    <p>HTML stands for <br> Hyper Text Markup Language</p>
+                    <h4>Learn More</h4>
+                </div>
+
+            </div>
+            <div class="css-sec">
+                <div class="css-content">
+                    <div class="css-image">
+                        <img src="/assets/css.png" alt="">
+                    </div>
+                    <h1>CSS</h1>
+                    <p>CSS is the acronym of <br> “Cascading Style Sheets”. </p>
+                    <h4>Learn More</h4>
+                </div>
+
+            </div>
+            <div class="java-sec">
+                <div class="java-content">
+                    <div class="java-image">
+                        <img src="/assets/js.png" alt="">
+                    </div>
+                    <h1>JavaScript</h1>
+                    <p>JS is a scripting language <br> used to develop web pages.</p>
+                    <h4>Learn More</h4>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Current target section end here -->
 </body>
 
 </html>
