added support section file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>"In the near future, I hope to <br> become a Developer."</h1>
             <p>I would like to be a programmer in the future. That's my dream job. <br>
                 I'm 22, and I am starting learning.</p>
-            <button class="Contact-button">Contact with me</button>
+            <button class="Contact-button" onclick="location.href='#support'">Contact with me</button>
         </div>
     </section>
 
@@ -143,6 +143,24 @@
     </section>
 
     <!-- Current target section end here -->
+
+    <!-- Support section start here -->
+
+        <section class="support-section-container" id="support">
+            <div class="support-section-content">
+                
+                <h1>I need Support</h1>
+                <p>This is support section, If you face any issue please write about your issue <br> and press the submit button</p>    
+                <div class="button-section">
+                    <input type="text" name="" placeholder="Suggest me any feedback for me">
+                    <button class="submit">Submit</button>
+                </div>            
+            </div>
+            
+
+        </section>
+
+    <!-- Support section end here -->
 </body>
 
 </html>
