added footer section file

--- a/index.html
+++ b/index.html
@@ -9,158 +9,174 @@
 </head>
 
 <body>
-    <!-- banner section start here -->
-    <section class="banner-container">
-        <div class="banner-content">
-            <div class="banner-image">
-                <img src="/assets/Group.png" alt="">
+
+    <main>
+        <!-- banner section start here -->
+        <section class="banner-container">
+            <div class="banner-content">
+                <div class="banner-image">
+                    <img src="./assets/Group.png" alt="">
+                </div>
+                <h1>"In the near future, I hope to <br> become a Developer."</h1>
+                <p>I would like to be a programmer in the future. That's my dream job. <br>
+                    I'm 22, and I am starting learning.</p>
+                <button class="Contact-button" onclick="location.href='#support'">Contact with me</button>
             </div>
-            <h1>"In the near future, I hope to <br> become a Developer."</h1>
-            <p>I would like to be a programmer in the future. That's my dream job. <br>
-                I'm 22, and I am starting learning.</p>
-            <button class="Contact-button" onclick="location.href='#support'">Contact with me</button>
-        </div>
-    </section>
+        </section>
 
-    <!-- banner section end here -->
+        <!-- banner section end here -->
 
-    <!-- Development section start here -->
+        <!-- Development section start here -->
 
-    <section class="development-section-container">
-        <div class="development-section-content">
-            <h1>Why Web Development??</h1>
-            <p>Working as a web developer can help you develop critical thinking abilities, <br>
-                as you often resolve real-world challenges with projects and fix code bugs regularly</p>
+        <section class="development-section-container">
+            <div class="development-section-content">
+                <h1>Why Web Development??</h1>
+                <p>Working as a web developer can help you develop critical thinking abilities, <br>
+                    as you often resolve real-world challenges with projects and fix code bugs regularly</p>
 
-        </div>
-        <div class="codding-section">
-            <div class="codding-section-content">
-                <div class="leftside-content">
-                    <h1>I will Do Coding and <br> Change The World</h1>
-                    <p>Without coding, we wouldn't have the websites, apps, and programs we rely on daily.</p>
-                    <button class="codding-button">Learn More</button>
-                </div>
-
-                <div class="rightside-content">
-                    <img src="/assets/Layer_1.png" alt="">
-
-                </div>
             </div>
-        </div>
-        <div class="creating-section">
-            <div class="creating-section-content">
-                <div class="leftside-creating-content">
-                    <img src="/assets/Group 3.png" alt="">
-                </div>
-
-                <div class="rightside-creating-content">
-                    <h1>I will help People by creating <br>Modern Web System</h1>
-                    <p>A modern web application architecture is a software design approach that leverages cloud
-                        computing and microservices.</p>
-                    <button class="codding-button">Learn More</button>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="codding-section">
-            <div class="codding-section-content">
-                <div class="leftside-content">
-                    <h1>I will Do Coding and <br> Change The World</h1>
-                    <p>Without coding, we wouldn't have the websites, apps, and programs we rely on daily.</p>
-                    <button class="codding-button">Learn More</button>
-                </div>
-
-                <div class="rightside-content">
-                    <img src="/assets/Group 4.png" alt="">
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Development section end here -->
-
-    <!-- Inspiration section start here -->
-    <section class="inspiration-section-container">
-        <div class="inspiration-section-content">
-            <h1>My Inspiration</h1>
-            <p>The endless possibilities of creating digital experiences and the ability <br> to bring ideas to life
-                through coding sparked my interest in web development</p>
-        </div>
-        <div class="box">
-            <iframe class="video" width="560" height="315"
-                src="https://www.youtube.com/embed/JUwePydwbUI?si=gs1Y7fF0mIuuhIvq" title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-    </section>
-
-    <!-- Inspiration section end here -->
-
-    <!-- Current target section start here -->
-    <section class="target-section-container">
-        <div class="target-section-content">
-            <h1>My Current Target</h1>
-            <p>My current target is <br> learn and practice html,css,javascript.</p>
-
-        </div>
-        <div class="target-item">
-            <div class="html-sec">
-                <div class="html-content">
-                    <div class="html-image">
-                        <img src="/assets/html.png" alt="">
+            <div class="codding-section">
+                <div class="codding-section-content">
+                    <div class="leftside-content">
+                        <h1>I will Do Coding and <br> Change The World</h1>
+                        <p>Without coding, we wouldn't have the websites, apps, and programs we rely on daily.</p>
+                        <button class="codding-button">Learn More</button>
                     </div>
-                    <h1>HTML</h1>
-                    <p>HTML stands for <br> Hyper Text Markup Language</p>
-                    <h4>Learn More</h4>
-                </div>
 
-            </div>
-            <div class="css-sec">
-                <div class="css-content">
-                    <div class="css-image">
-                        <img src="/assets/css.png" alt="">
+                    <div class="rightside-content">
+                        <img src="./assets/Layer_1.png" alt="">
+
                     </div>
-                    <h1>CSS</h1>
-                    <p>CSS is the acronym of <br> “Cascading Style Sheets”. </p>
-                    <h4>Learn More</h4>
                 </div>
-
             </div>
-            <div class="java-sec">
-                <div class="java-content">
-                    <div class="java-image">
-                        <img src="/assets/js.png" alt="">
+            <div class="creating-section">
+                <div class="creating-section-content">
+                    <div class="leftside-creating-content">
+                        <img src="./assets/Group 3.png" alt="">
                     </div>
-                    <h1>JavaScript</h1>
-                    <p>JS is a scripting language <br> used to develop web pages.</p>
-                    <h4>Learn More</h4>
+
+                    <div class="rightside-creating-content">
+                        <h1>I will help People by creating <br>Modern Web System</h1>
+                        <p>A modern web application architecture is a software design approach that leverages cloud
+                            computing and microservices.</p>
+                        <button class="codding-button">Learn More</button>
+
+                    </div>
                 </div>
             </div>
-        </div>
 
-    </section>
+            <div class="codding-section">
+                <div class="codding-section-content">
+                    <div class="leftside-content">
+                        <h1>I will Do Coding and <br> Change The World</h1>
+                        <p>Without coding, we wouldn't have the websites, apps, and programs we rely on daily.</p>
+                        <button class="codding-button">Learn More</button>
+                    </div>
 
-    <!-- Current target section end here -->
+                    <div class="rightside-content">
+                        <img src="./assets/Group 4.png" alt="">
 
-    <!-- Support section start here -->
-
-        <section class="support-section-container" id="support">
-            <div class="support-section-content">
-                
-                <h1>I need Support</h1>
-                <p>This is support section, If you face any issue please write about your issue <br> and press the submit button</p>    
-                <div class="button-section">
-                    <input type="text" name="" placeholder="Suggest me any feedback for me">
-                    <button class="submit">Submit</button>
-                </div>            
+                    </div>
+                </div>
             </div>
-            
+        </section>
+        <!-- Development section end here -->
+
+        <!-- Inspiration section start here -->
+        <section class="inspiration-section-container">
+            <div class="inspiration-section-content">
+                <h1>My Inspiration</h1>
+                <p>The endless possibilities of creating digital experiences and the ability <br> to bring ideas to life
+                    through coding sparked my interest in web development</p>
+            </div>
+            <div class="box">
+                <iframe class="video" width="560" height="315"
+                    src="https://www.youtube.com/embed/JUwePydwbUI?si=gs1Y7fF0mIuuhIvq" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+
+        <!-- Inspiration section end here -->
+
+        <!-- Current target section start here -->
+        <section class="target-section-container">
+            <div class="target-section-content">
+                <h1>My Current Target</h1>
+                <p>My current target is <br> learn and practice html,css,javascript.</p>
+
+            </div>
+            <div class="target-item">
+                <div class="html-sec">
+                    <div class="html-content">
+                        <div class="html-image">
+                            <img src="./assets/html.png" alt="">
+                        </div>
+                        <h1>HTML</h1>
+                        <p>HTML stands for <br> Hyper Text Markup Language</p>
+                        <h4>Learn More</h4>
+                    </div>
+
+                </div>
+                <div class="css-sec">
+                    <div class="css-content">
+                        <div class="css-image">
+                            <img src="./assets/css.png" alt="">
+                        </div>
+                        <h1>CSS</h1>
+                        <p>CSS is the acronym of <br> “Cascading Style Sheets”. </p>
+                        <h4>Learn More</h4>
+                    </div>
+
+                </div>
+                <div class="java-sec">
+                    <div class="java-content">
+                        <div class="java-image">
+                            <img src="./assets/js.png" alt="">
+                        </div>
+                        <h1>JavaScript</h1>
+                        <p>JS is a scripting language <br> used to develop web pages.</p>
+                        <h4>Learn More</h4>
+                    </div>
+                </div>
+            </div>
 
         </section>
 
-    <!-- Support section end here -->
+        <!-- Current target section end here -->
+
+        <!-- Support section start here -->
+
+        <section class="support-section-container" id="support">
+            <div class="support-section-content">
+
+                <h1>I need Support</h1>
+                <p>This is support section, If you face any issue please write about your issue <br> and press the
+                    submit button</p>
+                <div class="button-section">
+                    <input type="text" name="" placeholder="Suggest me any feedback for me">
+                    <button class="submit">Submit</button>
+                </div>
+            </div>
+
+
+        </section>
+
+        <!-- Support section end here -->
+    </main>
+    <footer class="footer-container">
+        <div class="footer-content">
+            <p>Designed by Kawsar Mahmud</p>
+            <div class="social-icon">
+                <img src="./assets/facebook.png" alt="">
+                <img src="./assets/linkedin-icon 1.png" alt="">
+                <img src="./assets/github.png" alt="">
+
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
